unpackaged/main/default/objects/Opportunity/fields/Equipment_Required__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Required__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment Required</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>