unpackaged/main/default/objects/Opportunity/fields/FAA_Required__c.field-meta.xml
<CustomField>
    <fullName>FAA_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FAA Required</label>
    <type>Checkbox</type>
</CustomField>