unpackaged/main/default/objects/Opportunity/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agricultural</fullName>
            </value>
            <value>
                <fullName>Civil Construction</fullName>
            </value>
            <value>
                <fullName>Conv. Power Production</fullName>
            </value>
            <value>
                <fullName>Food Processing</fullName>
            </value>
            <value>
                <fullName>HVAC</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>Mining</fullName>
            </value>
            <value>
                <fullName>Refinery/Chemical</fullName>
            </value>
            <value>
                <fullName>Steel Erection</fullName>
            </value>
            <value>
                <fullName>Utility</fullName>
            </value>
            <value>
                <fullName>Wind</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>