unpackaged/main/default/objects/Opportunity/fields/Job_Duration__c.field-meta.xml
<CustomField>
    <fullName>Job_Duration__c</fullName>
    <label>Job Duration</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>