unpackaged/main/default/objects/Opportunity/fields/Job_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_End_Date__c</fullName>
    <label>Job End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>