unpackaged/main/default/objects/Opportunity/fields/Job_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Start_Date__c</fullName>
    <label>Job Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>