unpackaged/main/default/objects/Opportunity/fields/Jobsite__c.field-meta.xml
<CustomField>
    <fullName>Jobsite__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Jobsite</label>
    <referenceTo>Jobsite__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>