unpackaged/main/default/objects/Opportunity/fields/Preliminary_Notice_Filed__c.field-meta.xml
<CustomField>
    <fullName>Preliminary_Notice_Filed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Preliminary Notice Filed</label>
    <type>Checkbox</type>
</CustomField>