unpackaged/main/default/objects/Opportunity/fields/Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Special_Instructions__c</fullName>
    <label>Special Instructions</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>