unpackaged/main/default/objects/Opportunity/fields/Special_Instructions_Internal__c.field-meta.xml
<CustomField>
    <fullName>Special_Instructions_Internal__c</fullName>
    <label>Special Instructions (Internal)</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>