unpackaged/main/default/objects/Opportunity/validationRules/Must_Have_Industry.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Have_Industry</fullName>
    <active>true</active>
    <errorConditionFormula>IF( NOT( ISPICKVAL( StageName , "Open") ) &amp;&amp;   ISPICKVAL( Industry__c , "")   ,true, false)</errorConditionFormula>
    <errorDisplayField>Industry__c</errorDisplayField>
    <errorMessage>An Opportunity must be assigned an Industry to move past the "Open" Stage</errorMessage>
</ValidationRule>