unpackaged/main/default/objects/Opportunity/validationRules/Must_Have_Jobsite.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Have_Jobsite</fullName>
    <active>true</active>
    <errorConditionFormula>IF( NOT( ISPICKVAL( StageName , "Open") ) &amp;&amp;  ISNULL( Jobsite__c )  ,true, false)</errorConditionFormula>
    <errorDisplayField>Jobsite__c</errorDisplayField>
    <errorMessage>An Opportunity must be assigned a Jobsite to move past the "Open" Stage</errorMessage>
</ValidationRule>