unpackaged/main/default/objects/Opportunity/validationRules/Must_Have_Loss_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Have_Loss_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISPICKVAL( StageName , "Closed Lost") &amp;&amp;  ISPICKVAL( Loss_Reason__c , "")  , true, false)</errorConditionFormula>
    <errorDisplayField>Loss_Reason__c</errorDisplayField>
    <errorMessage>Opportunities marked as Closed Lost must have a Loss Reason</errorMessage>
</ValidationRule>