unpackaged/main/default/objects/Opportunity/validationRules/Must_Have_Won_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Have_Won_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISPICKVAL( StageName , "Closed Won") &amp;&amp;  ISPICKVAL( Won_Reason__c , "")  , true, false)</errorConditionFormula>
    <errorDisplayField>Won_Reason__c</errorDisplayField>
    <errorMessage>Opportunities marked as Closed Won must have a Won Reason</errorMessage>
</ValidationRule>